Add zip as msys2 package

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -34,6 +34,7 @@ jobs:
             mingw-w64-${{ matrix.arch }}-cmake
             mingw-w64-${{ matrix.arch }}-ninja
             unzip
+            zip
 
       - run: >-
           PATH=$PATH:/mingw64/bin/ cmake
