--- a/test/specialfunctions/CMakeLists.txt
+++ b/test/specialfunctions/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 # Create a list of the files to be preprocessed
 set(fppFiles
+    test_specialfunctions_activations.fypp
     test_specialfunctions_gamma.fypp
 )
 
