--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -13,14 +13,17 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          [{ msystem: MINGW64, arch: x86_64 }, { msystem: MINGW32, arch: i686 }]
+          [
+            { msystem: MSYS, arch: x86_64 },
+            { msystem: MINGW64, arch: x86_64 },
+            { msystem: MINGW32, arch: i686 },
+          ]
     defaults:
       run:
         shell: msys2 {0}
     steps:
       - uses: actions/checkout@v2
-
-      - name: Setup MinGW native environment
+      - name: Setup environment
         uses: msys2/setup-msys2@v2
         with:
           msystem: ${{ matrix.msystem }}
