--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -57,13 +57,14 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install fypp
-      - run: >-
-          PATH=$PATH:/mingw64/bin/ cmake
-          -Wdev
-          -B build
-          -DCMAKE_BUILD_TYPE=Debug
-          -DCMAKE_Fortran_FLAGS_DEBUG="-Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fbacktrace"
-          -DCMAKE_MAXIMUM_RANK:String=4
+      - run: |
+          source venv/bin/activate
+          PATH=$PATH:/mingw64/bin/ cmake \
+          -Wdev \
+          -B build \
+          -DCMAKE_BUILD_TYPE=Debug \
+          -DCMAKE_Fortran_FLAGS_DEBUG="-Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fbacktrace" \
+          -DCMAKE_MAXIMUM_RANK:String=4 \
           -DCMAKE_INSTALL_PREFIX=$PWD/_dist
         env:
           FC: gfortran
