--- a/test/linalg/CMakeLists.txt
+++ b/test/linalg/CMakeLists.txt
@@ -7,6 +7,7 @@ set(
   "test_linalg_solve.fypp"
   "test_linalg_inverse.fypp"
   "test_linalg_lstsq.fypp"
+  "test_linalg_norm.fypp"
   "test_linalg_determinant.fypp"
   "test_linalg_svd.fypp"
   "test_linalg_matrix_property_checks.fypp"
@@ -19,6 +20,7 @@ ADDTEST(linalg_determinant)
 ADDTEST(linalg_eigenvalues)
 ADDTEST(linalg_matrix_property_checks)
 ADDTEST(linalg_inverse)
+ADDTEST(linalg_norm)
 ADDTEST(linalg_solve)
 ADDTEST(linalg_lstsq)
 ADDTEST(linalg_svd)
