Add additional terminal escape sequences for cursor actions to expand the stdlib_ansi module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,13 +28,13 @@ set(fppFiles
     stdlib_linalg_kronecker.fypp
     stdlib_linalg_cross_product.fypp
     stdlib_linalg_eigenvalues.fypp
-    stdlib_linalg_solve.fypp    
+    stdlib_linalg_solve.fypp
     stdlib_linalg_determinant.fypp
     stdlib_linalg_qr.fypp
     stdlib_linalg_inverse.fypp
     stdlib_linalg_norms.fypp
     stdlib_linalg_state.fypp
-    stdlib_linalg_svd.fypp 
+    stdlib_linalg_svd.fypp
     stdlib_linalg_cholesky.fypp
     stdlib_optval.fypp
     stdlib_selection.fypp
@@ -108,6 +108,7 @@ set(SRC
     stdlib_ansi.f90
     stdlib_ansi_operator.f90
     stdlib_ansi_to_string.f90
+    stdlib_ansi_cursor.f90
     stdlib_array.f90
     stdlib_codata.f90
     stdlib_error.f90
