typo fixes, small documentation changes and added an example

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(stringlist_type)
 add_subdirectory(strings)
 add_subdirectory(string_type)
 add_subdirectory(version)
+add_subdirectory(terminal)
