--- a/test/linalg/CMakeLists.txt
+++ b/test/linalg/CMakeLists.txt
@@ -10,6 +10,7 @@ set(
   "test_linalg_norm.fypp"
   "test_linalg_determinant.fypp"
   "test_linalg_qr.fypp"
+  "test_linalg_schur.fypp"
   "test_linalg_svd.fypp"
   "test_linalg_matrix_property_checks.fypp"
   "test_linalg_sparse.fypp"
@@ -26,6 +27,7 @@ ADDTEST(linalg_norm)
 ADDTEST(linalg_solve)
 ADDTEST(linalg_lstsq)
 ADDTEST(linalg_qr)
+ADDTEST(linalg_schur)
 ADDTEST(linalg_svd)
 ADDTEST(blas_lapack)
 ADDTEST(linalg_sparse)
