--- a/fpm.toml
+++ b/fpm.toml
@@ -5,6 +5,11 @@ author = "stdlib contributors"
 maintainer = "@fortran-lang/stdlib"
 copyright = "2019-2021 stdlib contributors"
 
+
+[install]
+library = true
+
+
 [dev-dependencies]
 test-drive.git = "https://github.com/fortran-lang/test-drive"
 test-drive.tag = "v0.4.0"
