--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,7 @@ jobs:
               - {compiler: gcc, version: 10}
         exclude:
           - os: macos-13
-            toolchain: {compiler: intel, version: '2024.1'}
+            toolchain: {compiler: intel-classic, version: '2024.1'}
           - os: macos-13
             toolchain: {compiler: gcc, version: 13}
     env:
