--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -19,8 +19,10 @@ ADD_EXAMPLE(inverse_subroutine)
 ADD_EXAMPLE(outer_product)
 ADD_EXAMPLE(eig)
 ADD_EXAMPLE(eigh)
+ADD_EXAMPLE(eig_generalized)
 ADD_EXAMPLE(eigvals)
 ADD_EXAMPLE(eigvalsh)
+ADD_EXAMPLE(eigvals_generalized)
 ADD_EXAMPLE(trace)
 ADD_EXAMPLE(state1)
 ADD_EXAMPLE(state2)
