--- a/test/specialfunctions/CMakeLists.txt
+++ b/test/specialfunctions/CMakeLists.txt
@@ -9,3 +9,4 @@ set(fppFiles
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
 
 ADDTEST(specialfunctions_gamma)
+ADDTEST(specialfunctions_activations)
