--- a/example/specialfunctions_activations/CMakeLists.txt
+++ b/example/specialfunctions_activations/CMakeLists.txt
@@ -4,3 +4,7 @@ ADD_EXAMPLE(gelu)
 ADD_EXAMPLE(relu)
 ADD_EXAMPLE(selu)
 ADD_EXAMPLE(silu)
+ADD_EXAMPLE(softmax)
+ADD_EXAMPLE(logsoftmax)
+ADD_EXAMPLE(softplus)
+ADD_EXAMPLE(step)
