--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -117,6 +117,7 @@ set(SRC
     stdlib_hashmap_open.f90
     stdlib_logger.f90
     stdlib_sorting_radix_sort.f90
+    stdlib_system_subprocess.c
     stdlib_system.F90
     stdlib_sparse.f90
     stdlib_specialfunctions.f90
