--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -30,4 +30,5 @@ add_subdirectory(stats_distribution_uniform)
 add_subdirectory(stringlist_type)
 add_subdirectory(strings)
 add_subdirectory(string_type)
+add_subdirectory(system)
 add_subdirectory(version)
