--- a/example/strings/CMakeLists.txt
+++ b/example/strings/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_EXAMPLE(slice)
 ADD_EXAMPLE(starts_with)
 ADD_EXAMPLE(strip)
 ADD_EXAMPLE(to_string)
+ADD_EXAMPLE(to_c_string)
 ADD_EXAMPLE(zfill)
 ADD_EXAMPLE(string_to_number)
 ADD_EXAMPLE(stream_of_strings_to_numbers)
