`join`: add example

--- a/example/strings/CMakeLists.txt
+++ b/example/strings/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_EXAMPLE(chomp)
 ADD_EXAMPLE(count)
 ADD_EXAMPLE(ends_with)
 ADD_EXAMPLE(find)
+ADD_EXAMPLE(join)
 ADD_EXAMPLE(padl)
 ADD_EXAMPLE(padr)
 ADD_EXAMPLE(replace_all)
