--- a/example/system/CMakeLists.txt
+++ b/example/system/CMakeLists.txt
@@ -4,3 +4,5 @@ ADD_EXAMPLE(process_3)
 ADD_EXAMPLE(process_4)
 ADD_EXAMPLE(process_5)
 ADD_EXAMPLE(process_6)
+ADD_EXAMPLE(process_7)
+ADD_EXAMPLE(sleep)
